--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 2rem;
+    height: 7rem;
     background: transparent;
     background: #555555;
     position: relative;
@@ -21,9 +21,10 @@ header{
 }
 
 
-.logo > img{
-    width: 100%;
-    height: ;
+.logo{
+    width: 160%;
+    height: 160%;
+    display: flex;
 }
 
 
@@ -36,7 +37,7 @@ header{
    
 }
 .navlist a{
-    color: black;
+    color: white;
     margin-left: 60px;
     font-size: 15px;
     font-weight: 600;
@@ -45,8 +46,11 @@ header{
    
 }
 .navlist a:hover{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #39b54a;
+    color: #ffdf4f;
 }
+
+
 #menu-icon{
     color: black;
     font-size: 35px;
@@ -151,7 +155,7 @@ section{
     display: block;
     padding: 12px;
     font-size: 25px;
-    color: white;
+    color: #ffdf4f;
     background: #232526;
     border-radius: 30px;
     transition: all .50s ease;
@@ -197,6 +201,40 @@ section{
     font-size: 19.5px;
 }
 
+.wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 330px;
+    flex-wrap: wrap;
+  }
+  
+  .button {
+    width: 140px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: -100px;
+    }
+  
+  .button:hover {
+    background-color: #ffdf4f;
+    box-shadow: 0px 15px 20px rgba(4, 245, 149, 0.4);
+    color: #39b54a;
+    transform: translateY(-7px);
+  }
 
 
 
