--- a/login.css
+++ b/login.css
@@ -67,7 +67,7 @@ html {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
-    color: #03e9f4;
+    color: #fdfc47;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -78,13 +78,13 @@ html {
   }
   
   .login-box a:hover {
-    background: #03e9f4;
+    background: #24fe41;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
+    box-shadow: 0 0 5px #fdfc47,
+                0 0 25px #fdfc47,
+                0 0 50px #fdfc47,
+                0 0 100px #fdfc47;
   }
   
   .login-box a span {
@@ -97,7 +97,7 @@ html {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
+    background: linear-gradient(90deg, transparent, #fdfc47);
     animation: btn-anim1 1s linear infinite;
   }
   
@@ -115,7 +115,7 @@ html {
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #03e9f4);
+    background: linear-gradient(180deg, transparent, #fdfc47);
     animation: btn-anim2 1s linear infinite;
     animation-delay: .15s
   }
@@ -134,7 +134,7 @@ html {
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #03e9f4);
+    background: linear-gradient(270deg, transparent, #39b54a);
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
   }
@@ -153,7 +153,7 @@ html {
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
+    background: linear-gradient(360deg, transparent, #39b54a);
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
   }
@@ -166,4 +166,19 @@ html {
       bottom: 100%;
     }
   }
-  
+
+  .sign-up{
+    width: 50%;
+    border: none;
+    background: none;
+    color: white;
+  }
+  .sign-up:hover{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .sign-up p{
+    font-size: 16px;
+    font-family: sans-serif;
+    
+  }
