--- a/login.css
+++ b/login.css
@@ -176,9 +176,11 @@ html {
   .sign-up:hover{
     cursor: pointer;
     text-decoration: underline;
+    text-decoration-color:  #24fe41;
   }
   .sign-up p{
     font-size: 16px;
     font-family: sans-serif;
+    color: #24fe41;
     
   }
