--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,18 @@
 
 }
 
+.cart{
+    color: white;
+    width: 80px;
+    margin-top: 10px;
+    font-size: 40px;
+}
+
+.cart a{
+    text-decoration: none;
+    color: white;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -27,6 +39,7 @@ header {
     position: relative;
 
 }
+
 
 
 .logo {
@@ -81,6 +94,12 @@ header {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 2rem;
+    background-image: url("/img/money\ bg.png"); /* The image used */
+    background-color: #cccccc; /* Used if the image is unavailable */
+    height: 500px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 section {
@@ -117,7 +136,7 @@ section {
 }
 
 .hero-img img {
-    width: 700px;
+    width: 500px;
     height: auto;
 }
 
@@ -212,30 +231,37 @@ section {
     margin-top: 400px;
 }
 
+.container p{
+    font-size: 16px;
+}
+
 .heading {
     position: relative;
+    margin-top: 200px;
 }
 
 .heading-img {
-    width: 900px;
+    width: 500px;
     height: auto;
    
-    margin-left: 120px;
+    margin-left: 320px;
 }
 
 .heading-text1 {
-    font-size: 46px;
+    font-size: 20px;
     text-transform: uppercase;
 }
 
 .heading-text {
     position: absolute;
-    bottom: 33%;
-    right: 17%;
+    bottom: 43%;
+    left: 50%;
 }
 
 .heading-text2 {
-    font-size: 19.5px;
+    font-size: 12.5px;
+    display: inline-block;
+    margin-left: -100px;
 }
 
 .wrap {
@@ -263,6 +289,7 @@ section {
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
+    margin-left: 100px;
     
 }
 
@@ -289,16 +316,17 @@ section {
     width: 400px;
     color: green;
     margin-left: 20px;
+    margin-top: -240px;
 }
 
 .image {
     display: inline-block;
-    width: 225px;
+    width: 145px;
     height: 145px;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
     z-index: 1;
     position: relative;
-    margin-right: 270px;
+    margin-right: 150px;
 }
 
 .card:hover .image::before {
@@ -392,37 +420,75 @@ a {
 }
 
 
-.overtuig {
+.sec--3--steps{
+    display: grid;
+    grid-template-columns:repeat(5, 1fr) ;
+    grid-template-rows:repeat(5, 1fr) ;
+    gap: 1rem;
+    color: #30dd8a;
+}
+
+.sec--3--steps h1{
     display: flex;
-    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    grid-column: 1/6;
+    font-size: 2rem;
+}
+
+.sec--3--steps figure{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #434343;
+    color: #f0f6ff;
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50rem;
+    font-size: 2.5rem;
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.step{
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    gap: 2rem;
+
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.overtuig p {
-    padding: 20px;
-    border: 2px solid white;
-    background: #232526;
-    color: white;
-    font-size: 18px;
+.step--1{
+
+    grid-column:2/3;
+    grid-row: 2/3;
 }
 
-.overtuig p img {
-    width: 300px;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 10px;
+.step--2{
+    grid-column:4/5;
+    grid-row: 2/3;
 }
 
+.step--3{
+    grid-column:2/3 ;
+    grid-row:4/5 ;
+}
+
+.step--4{
+    grid-column:4/5 ;
+    grid-row:4/5 ;
+}
 
 .section-a {
     margin: 2rem 0;
+    margin-top: -300px;
   }
   
+.section-a a:hover{
+    text-decoration: none;
+}
+
   .section-a .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -439,21 +505,351 @@ a {
   .section-a p {
     margin: 1rem 0;
   }
-  .btn {
-    display: inline-block;
-    background: var(--primary-color);
+ 
+  .about button {
+    background: #ffcc74;
     color: black;
-    padding: 0.8rem 1.5rem;
-    border: none;
-    cursor: pointer;
-    font-size: 1.1rem;
+    border: 2px solid transparent;
+    text-decoration: none;
+    padding: 10px 30px;
     border-radius: 30px;
-    background-color: red;
-  }  
-  .btn:hover {
-    background: yellow
-  }
+    font-size: 17px;
+    font-weight: bold;
+    width: 140px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    margin-right: 100px;
+}
 
+.about button:hover {
+    transform: scale(1.2);
+    background-color: transparent;
+    border: 2px solid #ffcc74;
+    color: #ffcc74;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.section--first{
+    background: black;
+}
+.section--second{
+    background: darkblue;
+}
+.section--third{
+    background: white;
+    display: flex;
+    padding: 4remS;
+    align-items: center;
+}
+
+.arrow{
+    width: 10%;
+    height: 100%;
+    background: white;
+    font-size: 300%;
+    outline: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow:hover{
+    cursor: pointer;
+}
+
+.reviews{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 2rem;
+    width: 80%;
+    flex-wrap: wrap;
+    margin-top: 200px;
+}
+.review{
+    width: 26.6rem;
+    min-height: 30rem;
+    background: darkred;
+    list-style: none;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0.5rem;
+    background: white;
+    box-shadow: 0 1rem 1rem 0 rgba(0,0,0,0.2),
+    inset 0 -1rem 1rem -1rem rgba(0,0,0,0.1) ;
+    position: relative;
+    animation-name: fadein;
+    animation-duration: 0.8s;
+}
+
+.review:nth-of-type(4), .review:nth-of-type(5), .review:nth-of-type(6){
+    display: none;
+}
+
+.review img{
+    width: 220px;
+    
+}
+
+.quote{
+    font-size: 500%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    line-height: 3rem;
+}
+
+.stars{
+    color: gold;
+}
+.review p{
+    font-size: 75%;
+    font-style: italic;
+    padding-bottom: 2rem;
+    border-bottom: 0.5 rem solid rgba(0,0,0,0.2);
+    margin-top: 10px;
+}
+
+footer {
+    width: 100%;
+    position: absolute;
+    /* bottom: 0;weghalen als niet werkt*/
+    background: linear-gradient(to right, #232526, #414345);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: #fff;
+    padding: 100px 0 30px;
+    border-top-left-radius: 125px;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.row {
+    width: 85%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.col {
+    flex-basis: 25%;
+    padding: 10px;
+}
+
+.col:nth-child(2),
+.col:nth-child(3) {
+    flex-basis: 15%;
+}
+
+.logo {
+    width: 80px;
+    margin-bottom: 30px;
+    margin-left: -23px;
+}
+
+.col h3 {
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.email-id {
+    width: fit-content;
+    border-bottom: 1px solid #ccc;
+    margin: 20px 0;
+}
+
+ul li {
+    list-style: none;
+    margin-bottom: 12px;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+form {
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 50px;
+    gap: 1rem;
+}
+
+form .fas {
+    font-size: 18px;
+    margin-right: 10px;
+}
+
+form input {
+    width: 100%;
+    background: transparent;
+    color: #ccc;
+    border: 0;
+    outline: none;
+}
+
+form button {
+    background: transparent;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+
+}
+
+form button .fas {
+    font-size: 16px;
+    color: #ccc;
+}
+
+.social-icons .fab {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #000;
+    background: #fff;
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+.social-icons:hover {
+    cursor: pointer;
+}
+
+.social-icons a {
+    color: white;
+}
+
+hr {
+    width: 90%;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    margin: 20px auto;
+}
+
+.copyright {
+    text-align: center;
+}
+
+.underline {
+    width: 100%;
+    height: 5px;
+    background: #39b54a;
+    border-radius: 3px;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    overflow: hidden;
+}
+
+footer a:hover {
+    border-bottom: 2px solid #39b54a;
+}
+
+.underline span {
+    width: 15px;
+    height: 100%;
+    background: #ffdf4f;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+
+
+@keyframes moving {
+    0% {
+        left: -20px
+    }
+
+    100% {
+        left: 100%;
+    }
+
+}
+
+button i {
+    color: #ccc;
+}
+
+@media (max-width:700px) {
+    footer {
+        bottom: unset;
+    }
+
+    .col {
+        flex-basis: 100%;
+
+    }
+
+    .col:nth-child(2),
+    .col:nth-child(3) {
+        flex-basis: 100%;
+    }
+}
+
+@media screen and (max-width: 1180px) {
+    .about {
+        width: 100%;
+        height: auto;
+        padding: 70px 0;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .about .content img {
+        margin-bottom: 35px;
+    }
+
+    .text h1 {
+        font-size: 60px;
+        margin-bottom: 25px;
+    }
+}
+
+@keyframes fadein{
+    from{
+        opacity: 0;
+        filter:blur(10px);
+    }
+    to{
+        opacity: 1;
+        filter:blur(0);
+    }
+}
+
+@media screen and (max-width: 50rem){
+    .arrow{
+        display: none;
+    }
+    .reviews{
+        width: 100%;
+    }
+}
 
 @media (max-width: 1535px) {
     header {
@@ -559,4 +955,17 @@ a {
         width: 100%;
         height: auto;
     }
+}
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background: #d1e5ff;
+}
+
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(to right, #616161, #9bc5c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
