--- a/info.css
+++ b/info.css
@@ -22,7 +22,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 5rem;
+    height: 9rem;
     background: transparent;
     background: #555555;
     position: relative;
@@ -30,24 +30,20 @@ header {
 }
 
 
-
 .logo {
-    width: 250%;
+    width: 350%;
     height: 210%;
     display: flex;
 }
 
 
 .navlist {
-    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 9rem;
-    background: transparent;
+    right: 7%;
+    position: absolute;
+    gap: 2rem;
     background: #555555;
-    position: relative;
-    padding: 4rem;
+
 }
 
 .navlist a {
@@ -303,8 +299,9 @@ hr {
     overflow: hidden;
 }
 
-a:hover {
+footer a:hover {
     border-bottom: 2px solid #39b54a;
+    text-decoration: none;
 }
 
 .underline span {
@@ -329,6 +326,8 @@ a:hover {
     }
 
 }
+
+
 
 button i {
     color: #ccc;
