--- a/productpage1.css
+++ b/productpage1.css
@@ -1,21 +1,48 @@
-* {
-    padding: 0;
+*, *::before, *::after{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
+    list-style: none;
 }
 
-a:link {
-    text-decoration: none;
+html{
+    font-size: 62.5%;
 }
 
-body {
-    background: white;
+body{
+    font-size: 2rem;
+    background: #eee;
+    font-family: sans-serif;
+    overflow-x: hidden;
+    overflow: hidden;
 }
 
+body::before, body::after{
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation-name: away;
+    animation-duration:1.2s ;
+    transform-origin: right;
+    animation-fill-mode: forwards;
+    animation-timing-function:cubic-bezier(0.45, 0.5, 0.7, 1);
+    
+}
 
+body::before{
+    
+    background: #9e9a9a;
+    animation-delay: 0.3s;
+    z-index: 1;
+}
 
-
+body::after{
+    background: #535252;
+    z-index: 2;
+}
 
 header {
     width: 100%;
@@ -74,57 +101,116 @@ header {
     display: none;
 }
 
-.about {
+main{
     width: 100%;
-    height: 100vh;
+    animation-fill-mode: backwards;
+    animation-name: popup;
+    animation-duration: 0.8s;
+    animation-delay: 1s;
+    margin-top: 100px;
+    
+}
+
+.inputs{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10rem;
+    width: 100%;
+    margin-bottom: 4rem;
+    flex-wrap: wrap;
+}
+
+.inputs > div{
+    display: flex;
+    align-items: center;
+    width: 40rem;
+}
+
+.label:hover{
+    cursor: pointer;
+}
+
+.filter{
+    width: 5rem;
+    height: 5rem;
+    margin-right: 2rem;
+    appearance: none;
+    -webkit-appearance: none;
+    background: #eee;
+    border-radius: 1rem;
+    box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.filter:hover{
+    cursor: pointer;
+}
+
+.filter:checked{
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.filter:checked ~ .label{
+    text-decoration: underline;
+}
+
+
+.games{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16rem;
+    align-items: center;
+    
+}
+
+
+
+.game{
+    width: 25rem;
+    height: 30rem;
+    transition: 0.2s transform;
+    flex-grow: 1;
+}
+
+.game p{
+    text-align: center;
+}
+
+
+.game:hover{
+    transform: scale(1.02) translateY(-0.7rem);
+    cursor: pointer;
+}
+
+.game > img{
+    width: 100%;
+    height: 85%;
+    object-fit: contain;
+}
+
+@keyframes away{
+    from{
+        transform:scaleX(1) ;
+    }
+    to{
+        transform: scaleX(0);
+    }
+}
+
+@keyframes popup{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.about{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.about .content img {
-    height: auto;
-    width: 600px;
-    max-width: 100%;
-}
-
-.text {
-    width: 550px;
-    max-width: 100%;
-    padding: 0 10px;
-}
-
-.content {
-    width: 1280px;
-    max-width: 95%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.text h1 {
-    color: #ffcc74;
-    font-size: 85px;
-    margin-bottom: 20px;
-    text-transform: capitalize;
-}
-
-.text h5 {
-    color: black;
-    font-size: 25px;
-    margin-bottom: 25px;
-    text-transform: capitalize;
-    letter-spacing: 2px;
-}
-
-.text p {
-    color: black;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    margin-bottom: 45px;
 }
 
 .about button {
@@ -146,8 +232,7 @@ header {
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
+    
 }
 
 .about button:hover {
@@ -158,11 +243,43 @@ header {
     transition: .4s;
     cursor: pointer;
 }
-
-li {
-    list-style: none;
+.about1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 }
 
+.about1 button {
+    background: #ffcc74;
+    color: black;
+    border: 2px solid transparent;
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 30px;
+    font-size: 17px;
+    font-weight: bold;
+    width: 140px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    
+}
+
+.about1 button:hover {
+    transform: scale(1.2);
+    background-color: transparent;
+    border: 2px solid #ffcc74;
+    color: #ffcc74;
+    transition: .4s;
+    cursor: pointer;
+}
 footer {
     width: 100%;
     position: absolute;
@@ -174,6 +291,8 @@ footer {
     border-top-left-radius: 125px;
     font-size: 13px;
     line-height: 20px;
+    overflow-y: hidden;
+    margin-top: 200px;
 }
 
 .row {
@@ -303,7 +422,7 @@ hr {
     overflow: hidden;
 }
 
-a:hover {
+footer a:hover {
     border-bottom: 2px solid #39b54a;
 }
 
@@ -350,21 +469,15 @@ button i {
     }
 }
 
-@media screen and (max-width: 1180px) {
-    .about {
-        width: 100%;
-        height: auto;
-        padding: 70px 0;
-    }
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background: #d1e5ff;
 }
 
-@media screen and (max-width: 650px) {
-    .about .content img {
-        margin-bottom: 35px;
-    }
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(to right, #000000, #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    .text h1 {
-        font-size: 60px;
-        margin-bottom: 25px;
-    }
 }
