--- a/productpage1.css
+++ b/productpage1.css
@@ -1,23 +1,39 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
 }
 
-html{
+html {
     font-size: 62.5%;
+    
 }
 
-body{
+body {
     font-size: 2rem;
-    background: #eee;
     font-family: sans-serif;
-    overflow-x: hidden;
-    overflow: hidden;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
-body::before, body::after{
+
+
+.cart {
+    color: white;
+    width: 80px;
+    margin-top: 10px;
+    font-size: 40px;
+}
+
+.cart a {
+    text-decoration: none;
+    color: white;
+}
+
+body::before,
+body::after {
     content: "";
     height: 100%;
     width: 100%;
@@ -25,52 +41,108 @@ body::before, body::after{
     top: 0;
     left: 0;
     animation-name: away;
-    animation-duration:1.2s ;
+    animation-duration: 1.2s;
     transform-origin: right;
     animation-fill-mode: forwards;
-    animation-timing-function:cubic-bezier(0.45, 0.5, 0.7, 1);
-    
+    animation-timing-function: cubic-bezier(0.45, 0.5, 0.7, 1);
+
 }
 
-body::before{
-    
-    background: #9e9a9a;
+body::before {
     animation-delay: 0.3s;
     z-index: 1;
 }
 
-body::after{
-    background: #535252;
+body::after {
     z-index: 2;
 }
+
+.wrapper {
+    width: 100%;
+    max-width: 31.25rem;
+    margin: 6rem auto;
+    margin-right: 700px;
+    
+  }
+  
+.wrapper  .label {
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: +1.3px;
+    margin-bottom: 0.5rem;
+  }
+  
+  .searchBar {
+    width: 120%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    margin-bottom: 1.5rem;
+  }
+
+  .searchBar:hover{
+  }
+
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    opacity: 1; /* Firefox */
+    font-size: 13.5px;
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: white;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: white;
+  }
+  
+
+  #searchQueryInput {
+    width: 100%;
+    height: 4.8rem;
+    background: #707070;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1rem;
+  }
+  
+  #searchQuerySubmit {
+    width: 3.5rem;
+    height: 2.8rem;
+    margin-left: -3.5rem;
+    background: none;
+    border: none;
+    outline: none;
+  }
+  
+  #searchQuerySubmit:hover {
+    cursor: pointer;
+  }
 
 header {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 5rem;
+    height: 9.8rem;
     background: transparent;
     background: #555555;
     position: relative;
-
+    
 }
-
-
-
-.logo {
-    width: 250%;
-    height: 210%;
-    display: flex;
-}
-
 
 .navlist {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 9rem;
+    justify-content: center;
+    height: 8rem;
     background: transparent;
     background: #555555;
     position: relative;
@@ -80,7 +152,7 @@ header {
 .navlist a {
     color: white;
     margin-left: 60px;
-    font-size: 15px;
+    font-size: 19px;
     font-weight: 600;
     border-bottom: 2px solid transparent;
     transition: all .55s ease;
@@ -92,6 +164,205 @@ header {
     color: #ffdf4f;
 }
 
+.logo {
+    width: 250%;
+    height: 220%;
+    display: flex;
+    top: 0%;
+    right: 50%;
+    margin-top: 31px;
+}
+
+
+nav {
+ }
+
+     /* Navbar Default State Bg Color */
+    .nav-menu .norm a:before {
+     background-color: #ffdf4f;}
+
+    /* Navbar Hover State Bg Color */
+    .nav-menu .norm a:after {
+     background-color: #ecc725;}
+
+    /* Dropdown Menu a (navbar) Bg Color */
+    .nav-menu .dropdown a:before {
+     background-color:#ffdf4f !important;
+     }
+
+    /* Dropdown Menu a (navbar) Bg Color */
+    .nav-menu .dropdown a:after {
+     background-color:white !important;
+     border-bottom: 2px solid #B7521B;}
+
+    /* Dropdown Menu Open a (navbar) Bg Color */
+    .down-color {
+     background-color: white !important;
+     border-bottom: 2px solid #ecc725;}
+
+    /* Dropdown Menu Inner Items Default Bg Color */
+    .dropdown-menu > li > a {
+     background-color: #ecc725 !important;}
+
+    /* Dropdown Menu Inner Items Hover/Focus Bg Color */
+    .dropdown-menu > li > a:hover,
+    .dropdown-menu > li > a:focus {
+     background-color: #ffdf4f !important;}
+
+/* - - - - End Color Theme - - - - */
+
+
+
+
+/* + + + + Navbar Body + + + + */
+
+nav {
+ position: absolute;
+max-height: 300px;
+ width: 100vw;
+}
+
+.nav-menu {
+ display: flex;
+ margin-top: -2px;
+ padding: 0;
+}
+
+
+/* - - - - End Navbar Body - - - - */
+
+
+/* + + + + Nav Buttons + + + + */
+
+.nav-menu li {
+ display: block;
+ flex-grow: 1;
+ text-align: center;
+ z-index: 100;
+ background-color: transparent;
+ line-height: 61px;
+ overflow: hidden;
+}
+
+
+
+.nav-menu li a {
+ position: relative;
+ display: inline-block;
+ z-index: 50;
+ width: 100%;
+ color: black;
+ text-decoration: none;
+ text-transform: uppercase;
+ font-size: 15px;
+}
+
+
+/* + + Style for Top-Level li's Only + + */
+
+.nav-menu .li-1 {
+ width: 100%;
+}
+
+
+/*  + + + + Nav Button Pseudos (For Hover State) + + + + */
+
+.nav-menu .norm a:after,
+.nav-menu .norm a:before {
+ content: "";
+ position: absolute;
+ display: inline-block;
+ height: 60px;
+}
+
+.nav-menu .norm a:after {
+ left: 50%;
+ width: 0%;
+ z-index: -20;
+ -webkit-transition: .6s ease all .2s;
+ transition: .6s ease all .2s;
+}
+
+.nav-menu .norm a:hover:after {
+ left: 0%;
+ width: 100%;
+ -webkit-transition: .2s ease-out all;
+ transition: .2s ease-out all;
+}
+
+.nav-menu .norm a:before {
+ left: 0%;
+ width: 100%;
+ z-index: -50;
+}
+
+/* - - - - End Nav Button Pseudos - - - - */
+
+
+
+/*  + + + + Dropdown Styles + + + + */
+
+.dropdown {
+ 
+}
+
+.dropdown-menu {
+ width: 100%;
+ position: relative;
+ top: -500px;
+ text-align: center;
+ z-index: 1049;
+ display: block;
+ list-style: none;
+ font-size: 12px;
+ border: none;
+ -webkit-background-clip: padding-box;
+ background-clip: padding-box;
+ padding: 0;
+}
+
+.dropdown-menu > li > a {
+ display: block;
+ padding-top: 5.6px;
+ padding-bottom: 5.6px;
+ clear: both;
+ font-family: gotham light !important;
+ font-size: 15px !important;
+ line-height: 35px;
+ color: #777 !important;
+ white-space: nowrap;
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+ text-decoration: none;
+ color: black !important;
+}
+
+.dropdown-menu > li > a:after,
+.dropdown-menu > li > a:before {
+ display: none !important;
+}
+
+
+/* + + jQuery Modified Dropdown Styles + + */
+
+#click-slide {
+ z-index: 3;
+ padding-bottom: 0 !important;
+}
+
+#drop {
+ width: 100%;
+ text-align: center;
+ margin-bottom: 18.5px;
+}
+
+.down {
+ position: absolute;
+ display: block;
+ top: 0px;
+}
 
 #menu-icon {
     color: black;
@@ -108,7 +379,7 @@ main{
     animation-duration: 0.8s;
     animation-delay: 1s;
     margin-top: 100px;
-    
+
 }
 
 .inputs{
@@ -161,7 +432,7 @@ main{
     flex-wrap: wrap;
     gap: 16rem;
     align-items: center;
-    
+
 }
 
 
@@ -189,37 +460,96 @@ main{
     object-fit: contain;
 }
 
-@keyframes away{
-    from{
-        transform:scaleX(1) ;
+.parts {
+    
+    
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.part--section {
+    border: #9e9a9a 0.25rem solid;
+    background: white;
+    margin: 40px;
+    max-height: 700px;
+    max-width: 100%;
+}
+
+.part--section h2,
+h1,
+p {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.part {
+    width: 25rem;
+    height: 30rem;
+    transition: 0.2s transform;
+    flex-grow: 1;
+    background: white;
+}
+
+.part:hover {
+    transform: scale(1.02) translateY(-0.7rem);
+    cursor: pointer;
+}
+
+.part>img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.part--section h2 {
+    font-size:9px;
+    color: #39b54a;
+}
+
+.part--section h1 {
+    font-size: 18px;
+    color: #39b54a;
+}
+
+@keyframes away {
+    from {
+        transform: scaleX(1);
     }
-    to{
+
+    to {
         transform: scaleX(0);
     }
 }
 
-@keyframes popup{
-    from{
+@keyframes popup {
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
 
-.about{
+.about {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .about button {
-    background: #ffcc74;
+    background: #ffdf4f;
     color: black;
     border: 2px solid transparent;
     text-decoration: none;
     padding: 10px 30px;
-    border-radius: 30px;
+
     font-size: 17px;
     font-weight: bold;
     width: 140px;
@@ -229,21 +559,20 @@ main{
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
-    border-radius: 45px;
+
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
-    
+
 }
 
 .about button:hover {
-    transform: scale(1.2);
-    background-color: transparent;
-    border: 2px solid #ffcc74;
-    color: #ffcc74;
-    transition: .4s;
+    background-color: #ecc725;
+    color: black;
     cursor: pointer;
+    transition: 0.4s;
 }
-.about1{
+
+.about1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -251,12 +580,12 @@ main{
 }
 
 .about1 button {
-    background: #ffcc74;
+    background: #ffdf4f;
     color: black;
     border: 2px solid transparent;
     text-decoration: none;
     padding: 10px 30px;
-    border-radius: 30px;
+    
     font-size: 17px;
     font-weight: bold;
     width: 140px;
@@ -266,33 +595,32 @@ main{
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
-    border-radius: 45px;
+   
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
-    
+
 }
 
 .about1 button:hover {
-    transform: scale(1.2);
-    background-color: transparent;
-    border: 2px solid #ffcc74;
-    color: #ffcc74;
-    transition: .4s;
+    background-color: #ecc725;
+    color: black;
     cursor: pointer;
+    transition: 0.4s;
 }
+
 footer {
+    max-height: 600px;
     width: 100%;
     position: absolute;
     /* bottom: 0;weghalen als niet werkt*/
-    background: linear-gradient(to right, #232526, #414345);
+    background: #313139;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     padding: 100px 0 30px;
     border-top-left-radius: 125px;
     font-size: 13px;
+    height: 100vh;
     line-height: 20px;
-    overflow-y: hidden;
-    margin-top: 200px;
 }
 
 .row {
@@ -315,16 +643,37 @@ footer {
 }
 
 .logo {
-    width: 80px;
+    width: 250px;
     margin-bottom: 30px;
-    margin-left: -23px;
+    margin-left: -53px;
 }
 
 .col h3 {
     width: fit-content;
     margin-bottom: 40px;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+
+.place {
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 20px;
+}
+
+.col p{
+    margin-right: 120px;
+}
+    
+
 
 .email-id {
     width: fit-content;
@@ -401,7 +750,7 @@ form button .fas {
 }
 
 hr {
-    width: 90%;
+    width: 100%;
     border: 0;
     border-bottom: 1px solid #ccc;
     margin: 20px auto;
@@ -409,6 +758,14 @@ hr {
 
 .copyright {
     text-align: center;
+    background: #26262e;
+    min-height: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -90px;
+    margin-top: -20px;
+    
 }
 
 .underline {
@@ -469,15 +826,16 @@ button i {
     }
 }
 
-
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 15px;
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background: #d1e5ff;
 }
 
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(to right, #000000, #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(to right, #000000, #434343);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
