--- a/productpage2.css
+++ b/productpage2.css
@@ -2,19 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
-}
-
-a:link {
+    font-family: 'Poppins', sans-serif;
+    list-style: none;
     text-decoration: none;
+
 }
-
-body {
-    background: white;
-}
-
-
-
 
 
 .cart {
@@ -380,106 +372,280 @@ nav {
     display: none;
 }
 
-.about {
+#size-guide::backdrop {
+    background: rgba(190, 190, 190, 0.5);
+  }
+  
+  #size-guide {
+    padding: 3rem;
+    border: none;
+    width: clamp(300px, 80vw, 600px);
+    max-height: 480px;
+  }
+  
+  #size-guide h2 {
+    margin: 0 0 1rem;
+  }
+  
+  .close-btn {
+    filter: grayscale();
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: none;
+    border: none;
+    font-size: 1.25rem;
+  }
+  
+  /* Style things */
+  
+  :root {
+    --blue: #4a9fe0;
+    --gray-bg: #f0f0f0;
+    --peppermint: #e9f2e1;
+    --lightgreen: #fdfdf9;
+  }
+  
+  
+  
+  th,
+  td {
+    border: 1px solid #ccc;
+    padding: 1rem;
+    text-align: center;
+  }
+  
+  th {
+    background-color: var(--peppermint);
+    font-weight: 400;
+  }
+  
+  td {
+    background-color: var(--lightgreen);
+    font-weight: 300;
+  }
+  
+  h2 {
+    margin-bottom: 0;
+    font-size: 1.6rem;
+    letter-spacing: 2px;
+    font-weight: 400;
+  }
+  
+  small {
+    max-width: 25ch;
+    display: inline-block;
+  }
+  
+  .price {
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-bottom: 0.5rem;
+  }
+  
+  hr {
+    margin: 1rem 0;
+    border-color: lightgray;
+    border-top: none;
+  }
+  
+  a,
+  #size-guide-btn {
+    font-family: "Roboto Mono", monospace;
+    color: var(--blue);
+  }
+  
+  #size-guide-btn {
+    border: 0;
+    background: none;
+    text-decoration: underline;
+    padding: 0;
+    cursor: pointer;
+  }
+  
+  figure {
+    height: 550px;
+    min-width: 300px;
+    margin: 0;
+  }
+  
+  img {
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.about .content img {
-    height: auto;
-    width: 600px;
-    max-width: 100%;
-}
-
-.text {
-    width: 550px;
-    max-width: 100%;
-    padding: 0 10px;
-}
-
-.content {
-    width: 1280px;
-    max-width: 95%;
-    margin: 0 auto;
+    height: 65%;
+    object-fit: contain;
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    list-style: none;
+  }
+  
+  .size-list {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-}
+    gap: 0.8rem;
+    margin: 0 0 1rem;
+    font-size: 14px;
+  }
+  
+  .size-list label {
+    background: var(--gray-bg);
+    padding: 0.5rem 1rem;
+    display: inline-block;
+  }
+  
+  .size-list input {
+    display: none;
+  }
+  
+  .size-list label:hover,
+  .size-list label:focus {
+    color: #39b54a;
+    outline: 1px solid;
+  }
+  
+  .size-list li:has(:checked) {
+    outline: 1px solid;
+  }
+  
+  .product {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    margin: 0 auto;
+    max-width: 900px;
+    margin-top: 100px;
+  }
+  
+  .color-list {
+    margin-top: 1rem;
+    padding: 0;
+    display: flex;
+    gap: 0.25rem;
+  }
+  
+  .color-list li {
+    font-size: 0;
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+    border-radius: 50%;
+    position: relative;
+    border: 1px solid;
+  }
+  
+  .quantity-label {
+    display: block;
+    margin: 1rem 0 0.5rem;
+  }
+  
+  #quantity {
+    font-size: 1.3rem;
+    max-width: 3rem;
+    margin-bottom: 1rem;
+    color: #39b54a;
+  }
+  
+  .add-to-cart-btn {
+    border: 1px solid;
+    font-weight: lighter;
+    padding: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    width: 100%;
+    background: #707070;
+    color: #39b54a;
+  }
+  
+  .measurements {
+    margin-top: 2rem;
+  }
+  
+  .measurements-guide li {
+    line-height: 1.5;
+    list-style: disc;
+    margin-left: 2rem;
+    margin-top: 1rem;
+  }
+  
+  .sr-only:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
 
-.text h1 {
-    color: #ffcc74;
-    font-size: 85px;
-    margin-bottom: 20px;
-    text-transform: capitalize;
-}
-
-.text h5 {
-    color: black;
-    font-size: 25px;
-    margin-bottom: 25px;
-    text-transform: capitalize;
-    letter-spacing: 2px;
-}
-
-.text p {
-    color: black;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    margin-bottom: 45px;
-}
-
-.about button {
-    background: #ffcc74;
+  .about button {
+    background: #ffdf4f;
     color: black;
     border: 2px solid transparent;
     text-decoration: none;
     padding: 10px 30px;
-    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     font-size: 17px;
     font-weight: bold;
-    width: 140px;
-    height: 45px;
+    width: 80px;
+    height: 40px;
     font-family: 'Roboto', sans-serif;
     font-size: 11px;
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
-    border-radius: 45px;
+
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
+
+}
+
+a{
+    text-decoration: none;
 }
 
 .about button:hover {
-    transform: scale(1.2);
-    background-color: transparent;
-    border: 2px solid #ffcc74;
-    color: #ffcc74;
-    transition: .4s;
+    background-color: #ecc725;
+    color: black;
     cursor: pointer;
+    transition: 0.4s;
 }
 
-li {
-    list-style: none;
+p{
+    font-size: 13px;
+}
+
+.details{
+    color: #39b54a;
+    border: 1px solid #555555;
+    font-size: 14.5px;
 }
 
 footer {
+    max-height: 610px;
     width: 100%;
     position: absolute;
     /* bottom: 0;weghalen als niet werkt*/
-    background: linear-gradient(to right, #232526, #414345);
+    background: #313139;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     padding: 100px 0 30px;
     border-top-left-radius: 125px;
     font-size: 13px;
+    height: 85vh;
     line-height: 20px;
+    margin-top: 100px;
+}
+
+footer p,h1,h4, .email-id{
+    color: #999999;
 }
 
 .row {
@@ -502,16 +668,37 @@ footer {
 }
 
 .logo {
-    width: 80px;
+    width: 250px;
     margin-bottom: 30px;
-    margin-left: -23px;
+    margin-left: -53px;
 }
 
 .col h3 {
     width: fit-content;
     margin-bottom: 40px;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+
+.place {
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 20px;
+}
+
+.col p {
+    margin-right: 120px;
+}
+
+
 
 .email-id {
     width: fit-content;
@@ -526,7 +713,7 @@ ul li {
 
 ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #999999;
 }
 
 
@@ -588,7 +775,7 @@ form button .fas {
 }
 
 hr {
-    width: 90%;
+    width: 100%;
     border: 0;
     border-bottom: 1px solid #ccc;
     margin: 20px auto;
@@ -596,6 +783,14 @@ hr {
 
 .copyright {
     text-align: center;
+    background: #26262e;
+    min-height: 135px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -90px;
+    margin-top: -20px;
+
 }
 
 .underline {
@@ -609,7 +804,7 @@ hr {
     overflow: hidden;
 }
 
-a:hover {
+footer a:hover {
     border-bottom: 2px solid #39b54a;
 }
 
@@ -656,21 +851,25 @@ button i {
     }
 }
 
-@media screen and (max-width: 1180px) {
-    .about {
-        width: 100%;
-        height: auto;
-        padding: 70px 0;
-    }
+#example { margin:4em 0; text-align:center;}
+
+button[type=submit] {
+  background-color:#ccc;
+  border-radius:5px;
+  font-size:14pt;
+  padding:4px 10px;
+  -moz-transition:width,padding 100ms;
+  -webkit-transition:width,padding 100ms;
 }
-
-@media screen and (max-width: 650px) {
-    .about .content img {
-        margin-bottom: 35px;
-    }
-
-    .text h1 {
-        font-size: 60px;
-        margin-bottom: 25px;
-    }
+button.submitted {
+background-image:url("http://loadinggif.com/images/image-selection/4.gif");
+  background-position:5px;
+  background-repeat:no-repeat;
+  padding-left:30px;
+  padding-right:15px;
+} 
+button.error {
+  background-color:#dcc;
+  border-color:#c00;
+  color:#c00;
 }
