--- a/productpage2.css
+++ b/productpage2.css
@@ -25,22 +25,22 @@
 
 .cart i {
     display: block;
-    padding: 12px;
-    font-size: 55px;
+    padding: 1.2rem;
+    font-size: 5.5rem;
     color: #ffdf4f;
-    border-radius: 30px;
+    border-radius: 3rem;
 
 }
 
 .cart i:hover {
-    transform: translateY(-6px);
+    transform: translateY(-0.6rem);
 }
 
 .wrapper {
     width: 100%;
     max-width: 31.25rem;
     margin: 6rem auto;
-    margin-right: 700px;
+    margin-right: 70rem;
 
 }
 
@@ -49,7 +49,7 @@
     font-size: 1.1rem;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: +1.3px;
+    letter-spacing: +0.13rem;
     margin-bottom: 0.5rem;
 }
 
@@ -69,7 +69,7 @@
     color: #39b54a;
     opacity: 1;
     /* Firefox */
-    font-size: 13.5px;
+    font-size: 1.35rem;
 }
 
 :-ms-input-placeholder {
@@ -147,16 +147,16 @@ header {
 
 .navlist a {
     color: white;
-    margin-left: 60px;
-    font-size: 19px;
+    margin-left: 6rem;
+    font-size: 1.9rem;
     font-weight: 600;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.2rem solid transparent;
     transition: all .55s ease;
 
 }
 
 .navlist a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
     color: #ffdf4f;
 }
 
@@ -166,7 +166,7 @@ header {
     display: flex;
     top: 0%;
     right: 50%;
-    margin-top: 31px;
+    margin-top: 3.1rem;
 }
 
 
@@ -190,13 +190,13 @@ nav {}
 /* Dropdown Menu a (navbar) Bg Color */
 .nav-menu .dropdown a:after {
     background-color: white !important;
-    border-bottom: 2px solid #B7521B;
+    border-bottom: 0.2rem solid #B7521B;
 }
 
 /* Dropdown Menu Open a (navbar) Bg Color */
 .down-color {
     background-color: white !important;
-    border-bottom: 2px solid #ecc725;
+    border-bottom: 0.2rem solid #ecc725;
 }
 
 /* Dropdown Menu Inner Items Default Bg Color */
@@ -219,13 +219,12 @@ nav {}
 
 nav {
     position: absolute;
-    height: 82px;
+    height: 8.2rem;
     width: 100vw;
 }
 
 .nav-menu {
     display: flex;
-    margin-top: 0px;
     padding: 0;
 }
 
@@ -241,7 +240,7 @@ nav {
     text-align: center;
     z-index: 100;
     background-color: transparent;
-    line-height: 61px;
+    line-height: 6.1rem;
     overflow: hidden;
 }
 
@@ -255,7 +254,7 @@ nav {
     color: black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 
@@ -273,7 +272,7 @@ nav {
     content: "";
     position: absolute;
     display: inline-block;
-    height: 60px;
+    height: 6rem;
 }
 
 .nav-menu .norm a:after {
@@ -308,12 +307,12 @@ nav {
 .dropdown-menu {
     width: 100%;
     position: relative;
-    top: -500px;
+    top: -50rem;
     text-align: center;
     z-index: 1049;
     display: block;
     list-style: none;
-    font-size: 12px;
+    font-size: 1.2rem;
     border: none;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
@@ -322,12 +321,12 @@ nav {
 
 .dropdown-menu>li>a {
     display: block;
-    padding-top: 5.6px;
-    padding-bottom: 5.6px;
+    padding-top: 0.56rem;
+    padding-bottom: 0.56rem;
     clear: both;
     font-family: gotham light !important;
-    font-size: 15px !important;
-    line-height: 35px;
+    font-size: 1.5rem !important;
+    line-height: 3.5rem;
     color: #777 !important;
     white-space: nowrap;
 }
@@ -354,23 +353,24 @@ nav {
 #drop {
     width: 100%;
     text-align: center;
-    margin-bottom: 18.5px;
+    margin-bottom: 1.85rem;
 }
 
 .down {
     position: absolute;
     display: block;
-    top: 0px;
+    top: 0rem;
 }
 
 
 #menu-icon {
     color: black;
-    font-size: 35px;
+    font-size: 3.5rem;
     z-index: 10001;
     cursor: pointer;
     display: none;
 }
+
 
 #size-guide::backdrop {
     background: rgba(190, 190, 190, 0.5);
@@ -471,7 +471,6 @@ nav {
   
   img {
     width: 100%;
-    height: 65%;
     object-fit: contain;
   }
   
@@ -749,6 +748,19 @@ form button {
 }
 
 form button .fas {
+    font-size: 16px;
+    color: #ccc;
+}
+
+form span {
+    background: transparent;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+
+}
+
+form span .fas {
     font-size: 16px;
     color: #ccc;
 }
